@@ -1,5 +1,5 @@
 /* 
- * Copyright (C) 2004 Georgy Yunaev tim@krasnogorsk.ru
+ * Copyright (C) 2004-2009 Georgy Yunaev gyunaev@ulduzsoft.com
  *
  * This library is free software; you can redistribute it and/or modify it 
  * under the terms of the GNU Lesser General Public License as published by 
@@ -10,8 +10,6 @@
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or 
  * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public 
  * License for more details.
- *
- * $Id$
  */
 
 #include "portable.c"
@@ -24,6 +22,18 @@
 #include "errors.c"
 #include "colors.c"
 #include "dcc.c"
+
+#ifdef _MSC_VER
+	/*
+
+	 * The debugger of MSVC 2005 does not like strdup.
+	 * It complains about heap corruption when free is called.
+	 * Use _strdup instead.
+	 */
+	#undef strdup
+	#define strdup _strdup
+#endif
+
 
 #define IS_DEBUG_ENABLED(s)	((s)->option & LIBIRC_OPTION_DEBUG)
 
@@ -127,9 +137,10 @@ int irc_connect (irc_session_t * session,
 	session->nick = strdup (nick);
 	session->server = strdup (server);
 
-	memset (&saddr, 0, sizeof(saddr));
+	// IPv4 address resolving
+	memset( &saddr, 0, sizeof(saddr) );
 	saddr.sin_family = AF_INET;
-	saddr.sin_port = htons (port);
+	saddr.sin_port = htons (port);		
 	saddr.sin_addr.s_addr = inet_addr (server);
 
     if ( saddr.sin_addr.s_addr == INADDR_NONE )
@@ -144,7 +155,7 @@ int irc_connect (irc_session_t * session,
       		hp = 0;
 #else
       	hp = gethostbyname (server);
-#endif
+#endif // HAVE_GETHOSTBYNAME_R
 		if ( !hp )
 		{
 			session->lasterror = LIBIRC_ERR_RESOLV;
@@ -155,7 +166,7 @@ int irc_connect (irc_session_t * session,
     }
 
     // create the IRC server socket
-	if ( socket_create (PF_INET, SOCK_STREAM, &session->sock)
+	if ( socket_create( PF_INET, SOCK_STREAM, &session->sock)
 	|| socket_make_nonblocking (&session->sock) )
 	{
 		session->lasterror = LIBIRC_ERR_SOCKET;
@@ -172,6 +183,134 @@ int irc_connect (irc_session_t * session,
     session->state = LIBIRC_STATE_CONNECTING;
     session->motd_received = 0; // reset in case of reconnect
 	return 0;
+}
+
+
+int irc_connect6 (irc_session_t * session,
+			const char * server, 
+			unsigned short port,
+			const char * server_password,
+			const char * nick,
+			const char * username,
+			const char * realname)
+{
+#if defined (ENABLE_IPV6)
+	struct sockaddr_in6 saddr;
+	struct addrinfo ainfo, *res = NULL;
+	char portStr[32];
+#if defined (_WIN32)
+	int addrlen = sizeof(saddr);
+	HMODULE hWsock;
+	getaddrinfo_ptr_t getaddrinfo_ptr;
+	freeaddrinfo_ptr_t freeaddrinfo_ptr;
+	int resolvesuccess = 0;
+#endif
+	sprintf(portStr, "%u", (unsigned)port);
+
+	// Check and copy all the specified fields
+	if ( !server || !nick )
+	{
+		session->lasterror = LIBIRC_ERR_INVAL;
+		return 1;
+	}
+
+	if ( session->state != LIBIRC_STATE_INIT )
+	{
+		session->lasterror = LIBIRC_ERR_STATE;
+		return 1;
+	}
+
+	if ( username )
+		session->username = strdup (username);
+
+	if ( server_password )
+		session->server_password = strdup (server_password);
+
+	if ( realname )
+		session->realname = strdup (realname);
+
+	session->nick = strdup (nick);
+	session->server = strdup (server);
+
+	memset( &saddr, 0, sizeof(saddr) );
+	saddr.sin6_family = AF_INET6;
+	saddr.sin6_port = htons (port);	
+
+#if defined (_WIN32)
+	if ( WSAStringToAddressA( (LPSTR)server, AF_INET6, NULL, (struct sockaddr *)&saddr, &addrlen ) == SOCKET_ERROR )
+	{
+		hWsock = LoadLibraryA("ws2_32");
+
+		if (hWsock)
+		{
+			/* Determine functions at runtime, because windows systems < XP do not
+			 * support getaddrinfo. */
+			getaddrinfo_ptr = (getaddrinfo_ptr_t)GetProcAddress(hWsock, "getaddrinfo");
+			freeaddrinfo_ptr = (freeaddrinfo_ptr_t)GetProcAddress(hWsock, "freeaddrinfo");
+
+			if (getaddrinfo_ptr && freeaddrinfo_ptr)
+			{
+				memset(&ainfo, 0, sizeof(ainfo));
+				ainfo.ai_family = AF_INET6;
+				ainfo.ai_socktype = SOCK_STREAM;
+				ainfo.ai_protocol = 0;
+
+				if ( getaddrinfo_ptr(server, portStr, &ainfo, &res) == 0 && res )
+				{
+					resolvesuccess = 1;
+					memcpy( &saddr, res->ai_addr, res->ai_addrlen );
+					freeaddrinfo_ptr( res );
+				}
+			}
+			FreeLibrary(hWsock);
+		}
+		if (!resolvesuccess)
+		{
+			session->lasterror = LIBIRC_ERR_RESOLV;
+			return 1;
+		}
+	}
+#else
+	if ( inet_pton( AF_INET6, server, (void*) &saddr.sin6_addr ) <= 0 )
+	{		
+		memset( &ainfo, 0, sizeof(ainfo) );
+		ainfo.ai_family = AF_INET6;
+		ainfo.ai_socktype = SOCK_STREAM;
+		ainfo.ai_protocol = 0;
+
+		if ( getaddrinfo( server, portStr, &ainfo, &res ) || !res )
+		{
+			session->lasterror = LIBIRC_ERR_RESOLV;
+			return 1;
+		}
+		
+		memcpy( &saddr, res->ai_addr, res->ai_addrlen );
+		freeaddrinfo( res );
+	}
+#endif
+	
+	// create the IRC server socket
+	if ( socket_create( PF_INET6, SOCK_STREAM, &session->sock)
+	|| socket_make_nonblocking (&session->sock) )
+	{
+		session->lasterror = LIBIRC_ERR_SOCKET;
+		return 1;
+	}
+
+    // and connect to the IRC server
+    if ( socket_connect (&session->sock, (struct sockaddr *) &saddr, sizeof(saddr)) )
+    {
+    	session->lasterror = LIBIRC_ERR_CONNECT;
+		return 1;
+    }
+
+    session->state = LIBIRC_STATE_CONNECTING;
+    session->motd_received = 0; // reset in case of reconnect
+	return 0;
+#else
+	session->lasterror = LIBIRC_ERR_NOIPV6;
+	return 1;
+#endif	
 }
 
 
@@ -273,7 +412,7 @@ static void libirc_process_incoming_data (irc_session_t * session, int process_l
 	memcpy (buf, session->incoming_buf, process_length);
 	buf[process_length] = '\0';
 
-	memset (params, 0, sizeof(params));
+	memset ((char *)params, 0, sizeof(params));
 	p = buf;
 
     /*
@@ -467,7 +606,7 @@ static void libirc_process_incoming_data (irc_session_t * session, int process_l
 					&& session->callbacks.event_ctcp_action )
 					{
 						params[0] = ctcp_buf + 7; // the length of "ACTION "
-						paramindex = 1;
+						paramindex = 2;
 
 						(*session->callbacks.event_ctcp_action) (session, "ACTION", prefix, params, paramindex);
 					}
@@ -567,7 +706,7 @@ int irc_process_select_descriptors (irc_session_t * session, fd_set *in_set, fd_
 	{
 		// Now we have to determine whether the socket is connected 
 		// or the connect is failed
-		struct sockaddr_in saddr, laddr;
+		struct sockaddr_storage saddr, laddr;
 		socklen_t slen = sizeof(saddr);
 		socklen_t llen = sizeof(laddr);
 
@@ -580,7 +719,10 @@ int irc_process_select_descriptors (irc_session_t * session, fd_set *in_set, fd_
 			return 1;
 		}
 
-		memcpy (&session->local_addr, &laddr.sin_addr, sizeof(session->local_addr));
+		if (saddr.ss_family == AF_INET)
+			memcpy (&session->local_addr, &((struct sockaddr_in *)&laddr)->sin_addr, sizeof(struct in_addr));
+		else
+			memcpy (&session->local_addr, &((struct sockaddr_in6 *)&laddr)->sin6_addr, sizeof(struct in6_addr));
 
 #if defined (ENABLE_DEBUG)
 		if ( IS_DEBUG_ENABLED(session) )
